samples/bad/bad004.lat
// Double return
int main() {
        return 0;
        return 1;
}
